add api add splash screen add signup login add saved movies screen and change database

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ EXPO_PUBLIC_MOVIE_API_KEY=eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIyNzU2OGNiY2ZlY2FjOWE2Z
 EXPO_PUBLIC_APPWRITE_PROJECT_ID=67d2cbb2000f251ba1fc
 EXPO_PUBLIC_APPWRITE_DATABASE_ID=6813864200356ef617d9
 EXPO_PUBLIC_APPWRITE_COLLECTION_ID=68138698000d26cee0ec
+EXPO_PUBLIC_APPWRITE_ENDPOINT="https://cloud.appwrite.io/v1"
+EXPO_PUBLIC_APPWRITE_USERS_COLLECTION_ID="6857f12000248f1b8689"
+EXPO_PUBLIC_APPWRITE_SAVED_MOVIES_COLLECTION_ID="68580996002a7180f952"
