--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,6 @@
 {
   "cli": {
-    "version": ">= 16.4.1",
-    "appVersionSource": "remote"
+    "version": ">= 7.6.0"
   },
   "build": {
     "development": {
@@ -9,11 +8,18 @@
       "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_MOVIE_API_KEY": "${EXPO_PUBLIC_MOVIE_API_KEY}",
+        "EXPO_PUBLIC_APPWRITE_PROJECT_ID": "${EXPO_PUBLIC_APPWRITE_PROJECT_ID}",
+        "EXPO_PUBLIC_APPWRITE_DATABASE_ID": "${EXPO_PUBLIC_APPWRITE_DATABASE_ID}",
+        "EXPO_PUBLIC_APPWRITE_COLLECTION_ID": "${EXPO_PUBLIC_APPWRITE_COLLECTION_ID}",
+        "EXPO_PUBLIC_APPWRITE_ENDPOINT": "${EXPO_PUBLIC_APPWRITE_ENDPOINT}",
+        "EXPO_PUBLIC_APPWRITE_USERS_COLLECTION_ID": "${EXPO_PUBLIC_APPWRITE_USERS_COLLECTION_ID}",
+        "EXPO_PUBLIC_APPWRITE_SAVED_MOVIES_COLLECTION_ID": "${EXPO_PUBLIC_APPWRITE_SAVED_MOVIES_COLLECTION_ID}"
+      }
     },
-    "production": {
-      "autoIncrement": true
-    }
+    "production": {}
   },
   "submit": {
     "production": {}
